<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <Button android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:text="@string/reset_button"
        android:layout_centerVertical="true"/>

    <ImageButton android:id="@+id/reset_info"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:paddingTop="12dp"
        android:scaleType="fitCenter"
        android:background="@null"
        android:src="@drawable/information"
        android:layout_toRightOf="@id/reset"
        android:layout_centerVertical="true"/>

    <TextView android:id="@+id/body_weight_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/reset"
        android:paddingTop="16dp"
        android:paddingLeft="12dp"
        android:layout_alignStart="@id/reset"
        android:text="@string/weight_text"
        android:textSize="16sp"
        android:textColor="#000000"/>

    <EditText android:id="@+id/body_weight"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/reset"
        android:textAlignment="center"
        android:layout_toRightOf="@id/body_weight_text"
        android:inputType="numberDecimal"
        android:hint="@string/weight_hint"/>

    <TextView android:id="@+id/body_weight_metric"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/reset"
        android:paddingTop="16dp"
        android:layout_toRightOf="@id/body_weight"
        android:text="@string/weight_metric"
        android:textSize="16sp"
        android:textColor="#000000"/>

    <ImageButton android:id="@+id/save_weight"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:paddingTop="28dp"
        android:scaleType="fitCenter"
        android:background="@null"
        android:layout_below="@id/reset_info"
        android:layout_alignStart="@id/reset_info"
        android:src="@drawable/save"
        android:onClick="saveWeight"/>
</RelativeLayout>